--- a/sites/all/themes/tmpltzr/style.css
+++ b/sites/all/themes/tmpltzr/style.css
@@ -97,4 +97,30 @@ Equation for font sizing:
 
 
 
-#template {width: 711px; border: 3px dashed black; }
+#tmpltzr .view-content {width: 711px;  }
+#tmpltzr #copy-paste {margin-left:5%; width: 90%; }
+#tmpltzr #gsapp-url { margin-left:5%; width: 90%; font:bold 36px Helvetica, Arial, sans-serif; margin-bottom: 20px;}
+#tmpltzr #page-wrapper-footer { display:block; clear: both; background:#222; color: white; padding:40px 0; width: 100%; margin: 40px 0;}
+#tmpltzr #page-wrapper-footer a, #tmpltzr #page-wrapper-footer h4 { color: white; }
+#tmpltzr #page-wrapper-footer h4 { text-decoration: none; }
+#tmpltzr #page-wrapper-footer a:hover { color: #FFFFEE; }
+#tmpltzr #copy-paste textarea { width: 100%; height: 100px; }
+
+
+#tmpltzr .tmpltzr-edit {
+	display:block;
+	height:20px;
+	border:1px solid red;
+}
+#tmpltzr .tmpltzr-edit a {
+	color: red;
+	font: bold 10px Arial, sans-serif;
+	text-decoration:none;
+	text-align:center;
+	margin:0 auto;
+}
+
+
+
+
+
