--- a/sites/all/themes/tmpltzr/css/gsapp.css
+++ b/sites/all/themes/tmpltzr/css/gsapp.css
@@ -1,21 +1,26 @@
-/* @override http://www.columbia.edu/cu/arch/staging/gsapp.css */
+/* @override 
+	http://www.columbia.edu/cu/arch/staging/gsapp.css
+	http://www.columbia.edu/cu/arch/tmpltzr/gsapp.css
+*/
 
 /* MAIN DIVS */
 .wrapper {
-    width: 966px;
     text-align: left;
-    margin:0px auto;
+    margin:0px;
     background-color:transparent; /* tct2003 111228 #fff; */
-    padding:10px;
+    padding:0;
     border:none; /* tct2003 111228 10px solid #fff;*/
 }
 #header {
-    width: 100%;
-    background-color:transparent; /* tct2003 111228 #fff; */
+    width:400px;
+    height:170px;
+    position:fixed;
+    top:0;
+    left:0;
+    background-color:black; /* tct2003 111228 #fff; */
     overflow: hidden;
 }
 #content {
-    margin-top: 10px;
     width: 100%;
     background-color:transparent; /* tct2003 111228 #fff; */
 }
@@ -24,8 +29,10 @@
     float:left;
 }
 #three_col_rt {
-    width: 711px;
-    float:right;
+    position:relative;
+    top:0;
+    margin:0 0 0 400px;
+    padding-left:60px;
     margin-top:0px;
 }
 #two_col_lt, #block-tagadelic-3 {
@@ -57,9 +64,14 @@
     background-color: #ebebeb;
 }
 #one_col_lt {
-    width: 237px;
-    background-color:transparent; /* tct2003 111228 #fff; */
-    float:left;
+    width: 400px;
+    background-color:black; /* tct2003 111228 #fff; */
+    height:100%;
+    padding-bottom:190px;
+    position:fixed;
+    top:170px;
+    left:0;
+	overflow: auto;
 }
 #one_col_rt {
     width: 237px;
@@ -98,6 +110,11 @@
     background-color:#efefef;
     height:9em;
     min-height:9em;
+}
+
+#searchBar {
+	margin:20px 0 50px 30px;
+	display:block;
 }
 
 .block-search {
@@ -281,7 +298,7 @@ a.home:hover {
     background-color: #fff;
 }
 #header a {
-    padding:6px 0px 6px 10px;
+    padding:30px 0px 6px 24px;
     display:block;
 }
 #footer a {
@@ -501,9 +518,8 @@ p.gobutton {
 }
 /* COURSE TABLE */
 #mytable {
-    font: 9px Arial, Helvetica, sans-serif;
+    font: 10px Arial, Helvetica, sans-serif;
     text-transform: uppercase;
-    letter-spacing: 1px;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -527,13 +543,12 @@ p.gobutton {
     border-top: 1px solid #ebebeb;
 }
 caption {
-    font: 10px arial, helvetica, sans-serif;
+    font: 11px "courier new", monospace;
     color: #000;
-    padding-top: 10px;
+    padding-top: 30px;
     padding-bottom: 10px;
     text-align: left;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    text-transform: none;
 }
 #nav {
     float: left;
@@ -561,26 +576,31 @@ caption {
     padding:5px;
 }
 #mytable th {
-    font: 10px arial, helvetica, sans-serif;
-    color: #051215;
-    border-right: 1px solid #ebebeb;
-    border-bottom: 1px solid #ebebeb;
-    border-left: 1px solid #ebebeb;
-    letter-spacing: 2px;
+    font: bold 11px "arial", helvetica, sans-serif;
+    color: #000000;
+    border-top: 2px solid #000;
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
+    border-left: 2px solid #000;
     text-transform: none;
     text-align: left;
-    padding: 3px 3px 3px 6px;
+    padding: 6px 3px 6px 6px;
     background: #f3f3f3;
 }
 #mytable td {
-    border-right: 1px solid #ebebeb;
-    border-bottom: 1px solid #ebebeb;
+	font: 10px "arial", helvetica, snas-serif;
+    border-right: 2px solid #000;
+    border-bottom: 2px solid #000;
+    border-top: 2px solid #000;
     background: #fff;
-    padding: 3px 3px 3px 6px;
-    color: #051215;
+    padding: 6px 3px 6px 3px;
+    color: #000;
+    text-transform: none;
+    text-align: center;
+  /*  word-break: break-all !important; */
 }
 #mytable2 th {
-    font: 10px arial, helvetica, sans-serif;
+    font:10px arial, helvetica, sans-serif;
     color: #051215;
     border-right: 1px solid #ebebeb;
     border-bottom: 1px solid #ebebeb;
@@ -598,14 +618,7 @@ caption {
     padding: 3px 3px 3px 6px;
     color: #051215;
 }
-h4.title {
-    font: 36px Arial, Helvetica, Verdana, sans-serif;
-    font-weight:bold !important;
-    margin: 0;
-    padding:0 0 10px;
-    text-transform:none;
-    text-decoration:none;
-}
+
 #header .block-menu_block li {
     width: 237px;
     background-color:transparent; /* tct2003 111228 #fff; */
@@ -848,8 +861,11 @@ ul.links li {
     padding: 0;
 }
 /* The active item in a Drupal menu */li a.active {
-    color: #000;
-    font-weight: bold;
+	color: white;
+}
+
+.menu li a:hover{
+	color:white;
 }
 /* Drupal forms */
 /* Wrapper for a form element (or group of form elements) and its label */.form-item,
@@ -1138,9 +1154,6 @@ div.view div.views-admin-links li a:hover {
 }
 .section-news-events .view-featured-event .view-content {
     border-bottom:1px solid #EFEFEF;
-}
-.view-content p {
-    padding:6px 0px;
 }
 .section-news-events .view-today-events .view-content .views-row-even,
 .section-news-events .view-today-events .view-content .views-row-odd,
@@ -2179,9 +2192,10 @@ margin-bottom:10px;
 }
 
 #three_col_rt #content {
-	margin-top:0px;
+	margin-top:170px;
+	width:520px;
 }
-
+.title
 /* UNPUBLISHED QUEUE PAGE */
 .page-unpublished .view-unpublished .views-row-odd,
 .page-unpublished .view-unpublished .views-row-even {
@@ -2563,7 +2577,9 @@ td.gsc-branding-text, td.gsc-branding-img {
 
 
 
+
 /* EVENTS */
 
 
-@import url("http://postfog.org/templatizer/sites/all/themes/tmpltzr/js/gsappnew.css");
+/* MENU */
+#one_col_lt h2 {display:none;} /* turn this off in Drupal - menu header, blocks config */
