--- a/sites/all/themes/tmpltzr/dashboard-widgets.css
+++ b/sites/all/themes/tmpltzr/dashboard-widgets.css
@@ -1,29 +1,27 @@
+/*= masonry general styles */
+body #masonrycontainer2 {
+	width: 100%;
+	height: 800px;
+}
 
-/* masonry test */
 body .masonry-brick-widget {
 		float: left;
 		text-align:center;
 		margin: 5px;
 		width: 240px;
-		height: 240px;
+		min-height: 240px;
 		border: 1px solid #ddd;
 }
-	
-body #item-1 {height: 400px; width: 300px;}
 
-body #item-2 {
-	background-color: #ddd;
-}
 
-/* flickr widget container */
-body #item-2 .slideshow {
-	height: 240px;
-	width: 240px;
-	overflow: hidden;
-	margin: auto;
-	padding: 0;
-}
 
+/*= end masonry general styles */
+/*  ------------------------------------------------- */
+
+
+/* masonry styles for 
+	flickr images for one-column 
+*/
 .flickr-image.flickr_widget.one-column {
 		width: 220px;
 		height: 220px;
@@ -31,6 +29,72 @@ body #item-2 .slideshow {
 		overflow: hidden;
 }
 
+.masonry-brick-widget .widget-data {
+	margin: 10px 10px 0px 10px;
+	width: 220px;
+}
+
+
+/*  ------------------------------------------------- */
+/*= flickr widget container 1 - #item-1 */
+body #item-1 {
+	background-color: #eee;
+}
+body #item-1 .slideshow {
+	height: 240px;
+	width: 240px;
+	overflow: hidden;
+	margin: auto;
+	padding: 0;
+}
+#item-1 .button {
+	z-index:999;
+	position: absolute;
+	top: 45%;
+	cursor: pointer;
+	width: 30px;
+	height: 30px;
+}
+#item-1 .button a {
+	text-decoration: none;
+	padding: 5px;
+}
+#item-1 #prev-button {
+	left: 0;	background:url(http://events.gsapp.org/sites/all/themes/events/images/slider-arrows.png) 0 0;
+}
+#item-1 #next-button {
+	left: 88%;	background:url(http://events.gsapp.org/sites/all/themes/events/images/slider-arrows.png) -31px 0;
+}
+#item-1 .widget-data {
+	width: inherit;
+	text-align: left;
+	padding: inherit;
+}
+#item-1 .widget-data .widget-data-title {
+	font-size: 11px;
+	font-weight: bold;
+	margin-bottom: 2px;
+}
+#item-1 .widget-data .widget-data-description {
+	font-size: 10px;
+}
+
+
+
+
+
+/*  ------------------------------------------------- */
+/*= flickr widget container 1 - #item-2 */
+body #item-2 {
+	background-color: #ddd;
+}
+body #item-2 .slideshow {
+	height: 240px;
+	width: 240px;
+	overflow: hidden;
+	margin: auto;
+	padding: 0;
+}
 #item-2 .button {
 	z-index:999;
 	position: absolute;
@@ -39,74 +103,32 @@ body #item-2 .slideshow {
 	width: 30px;
 	height: 30px;
 }
-
 #item-2 .button a {
 	text-decoration: none;
 	padding: 5px;
 }
-
 #item-2 #prev-button {
 	left: 0;	background:url(http://events.gsapp.org/sites/all/themes/events/images/slider-arrows.png) 0 0;
 }
-
 #item-2 #next-button {
 	left: 88%;	background:url(http://events.gsapp.org/sites/all/themes/events/images/slider-arrows.png) -31px 0;
 }
-
 #item-2 .widget-data {
 	width: inherit;
 	text-align: left;
 	padding: inherit;
 }
-
 #item-2 .widget-data .widget-data-title {
 	font-size: 11px;
 	font-weight: bold;
 	margin-bottom: 2px;
 }
-
 #item-2 .widget-data .widget-data-description {
 	font-size: 10px;
 }
+/*= end #item-2 */
+
+
 
 body #item-3 {height: 600px; width: 700px;}
 body #item-4 {height: 200px; }
-	
-body .wrapper {
- width: 100%;
-}
-
-body #three_col_rt {
-  width: 100%;
-}
-
-	
-
-body #masonrycontainer2 {
-	width: 100%;
-	height: 800px;
-}
-	
-/*
-body #masonrycontainer2 .masonry-brick-widget img {
-	width: inherit;
-	height: inherit;
-	
-}
-
-body #masonrycontainter-2 .flickr-image {
-	width: inherit;
-	height: inherit;
-}
-
-*/
-body #masonrycontainter-2 .1-column {
-	width: 240px;
-}
-
-/*= widget styles -------------------------------- */
-
-
-
-
-/*= end widget styles -------------------------------- */
