added functionity to make sure primary quarter modules don't propagate to the top when the screen resizes

--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -472,6 +472,13 @@ dl dd {
 }
 
 
+#tmpltzr h3.title{
+	width:500px;
+}
+
+#tmpltzr .title-container{
+	width:100%;
+}
 
 
 #tmpltzr a.anchorhash {
@@ -504,10 +511,10 @@ dl dd {
 
 #tmpltzr .views-row {
 
-	display:inline;
+	display:block;
+	float:left;
 
 }
-
 
 
 #tmpltzr .tmpltzr-primary {
