--- a/sites/all/themes/tmpltzr/css/gsapp.css
+++ b/sites/all/themes/tmpltzr/css/gsapp.css
@@ -860,8 +860,8 @@ ul.links li {
     border-bottom: none;
     padding: 0;
 }
-/* The active item in a Drupal menu */li a.active {
-	color: white;
+li a.active {
+	color: #A6B7C8;
 }
 
 .menu li a:hover{
