--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -698,6 +698,9 @@ dl dd {
 	margin:0 !important;
 }
 
+#tmpltzr .tmpltzr-embed-html {
+	margin:0 0 20px 0;
+}
 
 
 #tmpltzr .tmpltzr-secondaryquote, #tmpltzr .tmpltzr-secondaryimage {
