changed the way we deal with primaryquarter not floating to the top: uses .wrapAll() function on primaryquarter selector to wrap them in a .tmpltzr-primaryquarter-container div with float:left and width:500. Updated htmlelements.css to match, and stripped out the relationship between .views-row:after and .clearfix in gsapp.css

--- a/sites/all/themes/tmpltzr/css/gsapp.css
+++ b/sites/all/themes/tmpltzr/css/gsapp.css
@@ -905,18 +905,14 @@ li a.active {
     margin-top: 1em;
 }
 /* Clear floats solution: http://www.positioniseverything.net/easyclearing.html */
-.clearfix:after,
-.views-row-odd:after,
-.views-row-even:after {
+.clearfix:after {
     content: ".";
     display: block;
     height: 0;
     clear: both;
     visibility: hidden;
 }
-.clearfix,
-.views-row-odd,
-.views-row-even {
+.clearfix {
     display: inline-block;
 }
 /* Hides from IE-mac \ */
