--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -452,6 +452,16 @@ dl dd {
 	margin:0 0 25px;
 }
 
+#tmpltzr a {
+	text-decoration: none;
+	border-bottom: solid 2px;
+}
+
+#tmpltzr a:hover {
+	border-bottom: none;
+	color: #000;
+}
+
 #tmpltzr .view {
 	margin-top:0;
 	width:100%;
@@ -610,6 +620,16 @@ dl dd {
 
 	margin:0 0 30px 0;
 
+}
+
+#tmpltzr .tmpltzr-title a{
+	text-decoration: none !important;
+	border-bottom: none;
+}
+
+#tmpltzr .tmpltzr-title a:hover {
+	border-bottom: solid 2px;
+	color: black !important;
 }
 
 
